# FRC-14

./: .gitattributes  .gitignore  CMakeLists.txt  CODING-CONVENTIONS.md  LICENSE  LICENSE.txt  Project1.sln  Project1.vcxproj  README.md
src/dashboard/: dashboard.lvproj  dashboard.vi
src/dashboard-vision/: target-detection.lvproj  target-detection.vi
src/robot/: annular_sector_button.cpp  annular_sector_button.hpp  axis_range_button.cpp  axis_range_button.hpp  port_mapping.hpp  robot.cpp  robot.hpp  user_interface.cpp  user_interface.hpp  xbox_controller.cpp  xbox_controller.hpp
src/robot/commands/: arm_catapult.cpp  arm_catapult.hpp  autonomous.cpp  autonomous.hpp  control_lights.cpp  control_lights.hpp  control_underglow.cpp  control_underglow.hpp  drive_straight.cpp  drive_straight.hpp  fire.cpp  fire.hpp  fire_catapult.cpp  fire_catapult.hpp  fire_if_hot.cpp  fire_if_hot.hpp  fire_when_signaled.cpp  fire_when_signaled.hpp  keep_catapult_released.cpp  keep_catapult_released.hpp  keep_puller_raised.cpp  keep_puller_raised.hpp  lock_catapult.cpp  lock_catapult.hpp  lower_catapult.cpp  lower_catapult.hpp  lower_collector.cpp  lower_collector.hpp  lower_puller.cpp  lower_puller.hpp  match_alliance_underglow.cpp  match_alliance_underglow.hpp  override_safety.cpp  override_safety.hpp  pass.cpp  pass.hpp  pull_back_catapult.cpp  pull_back_catapult.hpp  raise_collector.cpp  raise_collector.hpp  (+40 more)
src/robot/subsystems/: camera_light.cpp  camera_light.hpp  catapult.cpp  catapult.hpp  collector.cpp  collector.hpp  compressor_system.cpp  compressor_system.hpp  drive_base.cpp  (+21 more)
